Arrumando a localização do disco C para o disco Q